k8s/00-namespace-config.yaml
# ==============================================================================
# 00-NAMESPACE-CONFIG.YAML - CONFIGURACIÓN INICIAL DE KUBERNETES
# Define el espacio de nombres (Namespace), scripts de inicialización SQL (ConfigMap)
# y credenciales sensibles codificadas (Secrets).
# ==============================================================================

# ------------------------------------------------------------------------------
# 1. NAMESPACE: fintech
# Aislamiento lógico de recursos dentro del clúster de Kubernetes para todo el sistema
# ------------------------------------------------------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: fintech # Nombre del espacio de nombres donde residirán los Pods y Servicios
