k8s/05-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: fintech
spec:
  stripPrefixRegex:
    regex:
      - "^/api"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-mailpit-prefix
  namespace: fintech
spec:
  stripPrefixRegex:
    regex:
      - "^/mailpit"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  namespace: fintech
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: fintech-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-ingress
  namespace: fintech
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: fintech-strip-mailpit-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /mailpit
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              number: 8025
